--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="云凡" />
         <link rel="apple-touch-icon" href="https://cdn.mom1.cn/1/favicon.ico">
     </head>
-     <body style="padding:12% 5% 5% 5%;background-image:url(http://img.netbian.com/file/2024/1108/103206bBYEV.jpg);">
+     <body style="padding:12% 5% 5% 5%;background-image:url(https://paoidc.com/upload/1729590253058_j8y-a.png);">
         <div style="text-align:center;border-width:1px;border-style:solid;border-color:rgb(2, 204, 245);background-color:#79918e6b;border-radius:20px;">
           <p>
           	<img style="border-radius:50%;max-width:100px;max-height:100px;" src="style/images/H6dab62e0541a46969864585570bca3a6Q.jpg"></p>
