--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
            <br>
            <a style="border-radius:20px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://mitay.net/" target="_blank">LOL全服通用优质符文推荐助手</a>
            <a style="border-radius:20px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://www.htuzi.com/" target="_blank">LOL动态兔子换肤助手(有国服版本和外服版本)</a>
-             <a style="border-radius:20px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="http://leagueskin.net/p/download-mod-skin-2020-chn" target="_blank">LOL静态老外换肤助手(全服通用)</a>
+             <a style="border-radius:20px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://paoidc.com/wangpan.html" target="_blank">清欢图床</a>
             <a style="border-radius:20px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="http://www.cfzhushou.com/" target="_blank">CF活动一键领取工具</a>
 <br>
-           <a style="border-radius:20px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="http://lolnmzs.com/" target="_blank">LOL牛马助手 一键天赋 免费换肤 发送牛马队友战绩</a>
+           <a style="border-radius:20px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://www.itdog.cn/" target="_blank">ITDOG测速</a>
            <a style="border-radius:20px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://www.tmjiasuqi.com/" target="_blank">TM加速器 目前免费</a>
            <a style="border-radius:20px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://www.ourplay.net/download/" target="_blank">OurPlay加速器 目前免费</a>
                    <script type="text/javascript" color="255,255,255" opacity='0.7' zIndex="-2" count="200" src="style/js/canvas-nest.min.js"></script>
