--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="云凡" />
         <link rel="apple-touch-icon" href="https://cdn.mom1.cn/1/favicon.ico">
     </head>
-     <body style="padding:12% 5% 5% 5%;background-image:url(/style/images
+     <body style="padding:12% 5% 5% 5%;background-image:url(style/images
 /img/bz.jpg);">
         <div style="text-align:center;border-width:1px;border-style:solid;border-color:rgb(2, 204, 245);background-color:#79918e6b;border-radius:20px;">
           <p>
